--- a/html-css/module-3/styles/style.css
+++ b/html-css/module-3/styles/style.css
@@ -1,77 +1,122 @@
+html {
+    box-sizing: border-box;
+}
+
+*, 
+*::before, 
+*::after {
+    box-sizing: inherit;
+}
+
 *{
     margin: 0;
     padding: 0;
 }
-body{
-    width: 1200px;
+
+body {
     font-family: "Playfair display";
+    font-size: 0;
+    line-height: 16.8px;
 }
-header{
-    width: 100%;
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
 }
-.top__menu{
+
+/*Menu__________*/
+.top__menu {
     text-align: center;
+    vertical-align: middle;
+    padding: 72px 0 68px 0;
 }
-.top__menu li{
+
+.top__menu li {
     display: inline-block;
-    width: 12.6%;
-    line-height: 95px;
 }
-.top__menu li a{
+
+.top__menu li:not(:last-child) {
+    margin-right: 100px;
+}
+
+.top__menu li a {
     text-decoration: none;
     font-size: 14px;
+    line-height: 24px;
     text-transform: uppercase;
-} 
-.top__menu li a:hover{
+}
+
+.top__menu li a:hover, 
+.top__menu li a:focus {
     color: #03a9f4;
 }
+
 .top__menu li a,
 h1,
-section span{
+section span {
     color: #626262;
 }
-section{
+
+/*Main content__________*/
+section {
     text-align: center;
-    padding: 60px 0;
+    margin-bottom: 135px;
 }
+
+.last-section {
+    margin-bottom: 50px;
+}
+
 .box-left,
-.box-right{
+.box-right {
     display: inline-block;
-    width: 420px;
+    width: 421px;
     text-align: justify;
 }
-.box-left{
-    padding: 0 29px 0 149px;
+
+.box-left {
+    margin-right: 61px;
 }
-.box-right{
-    padding: 0 149px 0 29px;
-}
-img{
+
+img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
-p{
-    padding-top: 31px;
-    /* height: 71px;
-    line-height: 71px; */
+
+.img-box {
+    margin-bottom: 31px;
+}
+
+p {
+    margin-bottom: 33px;
     text-transform: uppercase;
     font-size: 14px;
+    line-height: 16.8px;
     color: #b4ad9e;
-    font-family: "Ubuntu light"
+    font-family: "Ubuntu light";
 }
-h1{
-    padding-top: 23px;
+
+h1 {
+    margin-bottom: 35px;
     font-size: 30px;
+    line-height: 36px;
+    font-weight: normal;
 }
-section span{
+
+section span {
     display: block;
-    padding-top: 23px;
     font-size: 14px;
     line-height: 24px;
 }
-form{
+
+/*Button________*/
+form {
     text-align: center;
+    margin-bottom: 70px;
 }
-button{
+
+button {
     height: 60px;
     width: 164px;
     border-width: 1px;
