--- a/html-css/module-3/styles/style.css
+++ b/html-css/module-3/styles/style.css
@@ -67,8 +67,7 @@ section {
     margin-bottom: 50px;
 }
 
-.box-left,
-.box-right {
+.box {
     display: inline-block;
     width: 421px;
     text-align: justify;
