--- a/html-css/module-3/styles/style.css
+++ b/html-css/module-3/styles/style.css
@@ -53,7 +53,7 @@ body {
 
 .top__menu li a,
 h2,
-.article p:last-child {
+article p:last-child {
     color: #626262;
 }
 
@@ -63,18 +63,18 @@ section {
     margin-bottom: 50px;
 }
 
-.article {
+article {
     display: inline-block;
     width: 421px;
     text-align: justify;
     margin-bottom: 135px;
 }
 
-section .article:nth-child(n + 5) {
+section article:nth-child(n + 5) {
     margin-bottom: 0px;
 }
 
-section .article:nth-child(odd) {
+section article:nth-child(odd) {
     margin-right: 61px;
 }
 
@@ -88,7 +88,16 @@ img {
     margin-bottom: 31px;
 }
 
-.article p:first-child {/* Не применяеться стиль, не могу разобраться*/
+/* article p:first-child { Не применяеться стиль, не могу разобраться
+    margin-bottom: 33px;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 16.8px;
+    color: #b4ad9e;
+    font-family: "Ubuntu light";
+} */
+
+.tittle {
     margin-bottom: 33px;
     text-transform: uppercase;
     font-size: 14px;
@@ -104,18 +113,16 @@ h2 {
     font-weight: normal;
 }
 
-.article p:last-child {
+article p:last-child {
     font-size: 14px;
     line-height: 24px;
 }
 
 /*Button________*/
-form {
-    text-align: center;
-    margin-bottom: 70px;
-}
 
 button {
+    display: block;
+    margin: 0 auto 70px;
     height: 60px;
     width: 164px;
     border-width: 1px;
