--- a/html-css/module-3/styles/style.css
+++ b/html-css/module-3/styles/style.css
@@ -97,7 +97,7 @@ img {
     font-family: "Ubuntu light";
 } */
 
-.tittle {
+.tittle {/*Временная альтернатива*/
     margin-bottom: 33px;
     text-transform: uppercase;
     font-size: 14px;
