--- a/html-css/module-3/styles/style.css
+++ b/html-css/module-3/styles/style.css
@@ -63,7 +63,6 @@ button {
 /*Main content__________*/
 section {
     text-align: center;
-    margin-bottom: 50px;
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -140,7 +139,7 @@ article p:last-child {
 
 button {
     display: block;
-    margin: 0 auto 70px;
+    margin: 50px auto 70px;
     height: 60px;
     width: 164px;
     border-width: 1px;
