--- a/html-css/module-4/styles/style.css
+++ b/html-css/module-4/styles/style.css
@@ -134,12 +134,6 @@ h2 {
     height: 322px;
     float: left;
     background-color: #e9f0fd;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.product-cart:last-child {
-    background-image: url(../img/product/product8.png);
 }
 
 .product-cart:not(:nth-child(4n + 4)) {
@@ -148,6 +142,81 @@ h2 {
 
 .product-cart:nth-child(-n + 4) {
     margin-bottom: 30px;
+}
+
+.product-cart::before {
+    content: "";
+    display: block;
+    height: 282px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.heel::before {
+    background-image: url('../img/product/product1.png');
+}
+
+.belt::before {
+    background-image: url('../img/product/product2.png');
+}
+
+.hat::before {
+    background-image: url('../img/product/product3.png');
+}
+
+.sac::before {
+    background-image: url('../img/product/product4.png');
+}
+
+.bag::before {
+    background-image: url('../img/product/product5.png');
+}
+
+.strap::before {
+    background-image: url('../img/product/product6.png');
+}
+
+.shoes::before {
+    background-image: url('../img/product/product7.png');
+}
+
+.glasses::before {
+    background-image: url('../img/product/product8.png');
+}
+
+.product-cart p {
+    margin: 0;
+    height: 40px;
+    font-size: 18px;
+    line-height: 32px;
+    color: #fff;
+    text-align: left;
+    text-transform: uppercase;
+    padding: 5px 0 0 12px;
+}
+
+.product-cart p:first-child {
+    float: left;
+    width: 201px;
+    background-color: #323232;
+}
+
+.product-cart p:last-child {
+    float: right;
+    width: 54px;
+    background-color: #8c8c8c;
+}
+
+.product-cart p:last-child::before {
+    content: "$";
+}
+
+.product-cart:hover p:first-child {
+    background-color: #1abc9c;
+}
+
+.product-cart:hover p:last-child {
+    background-color: #7fd9c7;
 }
 
 /*BLog_________*/
