--- a/html-css/module-4/styles/style.css
+++ b/html-css/module-4/styles/style.css
@@ -295,7 +295,7 @@ h2::after {
     border-radius: 5px;
     font-family: "Open Sans Light";
     font-size: 16px;
-    background-color: black;
+    background-color: #0f0101;
     color: #fff;
     text-align: center;
 }
