--- a/html-css/module-5/styles/style.css
+++ b/html-css/module-5/styles/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    /* width: 1600px; */
     font-family: "Roboto Black", "Times New Roman", serif;
 }
 
@@ -19,6 +20,7 @@ img {
 }
 
 ul {
+    margin: 0;
     padding: 0;
 }
 
@@ -59,7 +61,7 @@ a{
 /*header_______*/
 
 header {
-    padding-bottom: 95px;
+    padding-bottom: 34px;
 }
 
 nav {
@@ -119,7 +121,6 @@ h2 {
     width: 1600px;
     height: 600px;
     position: relative;
-    border: 1px solid #0f0101;
     margin: 0 auto;
 }
 
@@ -132,6 +133,8 @@ h2 {
     background-color: #1abc9c;
     top: 50%;
     transform: translateY(-50%);
+    cursor: pointer;
+    z-index: 1;
 }
 
 .slider .prev {
@@ -142,17 +145,51 @@ h2 {
     right: 245px;
 }
 
-
-
-/*Colection_________*/
-
-main {
-    background-color: #e9f0fd;
+.slides li {
+    position: relative;
 }
 
+.slides .black-fon {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.52);
+}
+
+.slides h3,
+.slides p {
+    position: absolute;
+    margin: 0;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.slides h3 {
+    left: 50%;
+    transform: translateX(-50%);
+    top: 210px;
+    font-family: 'Roboto Black';
+    font-size: 60px;
+    line-height: 82px;
+}
+
+.slides p {
+    top: 285px;
+    left: 420px;
+    font-family: 'Roboto Light';
+    font-size: 24px;
+    line-height: 54px;
+}
+
+.slides li img {
+    width: 100%;
+    object-fit: cover;
+}
+/*Colection_________*/
 section {
+    padding: 95px 0 98px;
+    background-color: #e9f0fd;
     text-align: center;
-    padding-bottom: 98px;
 }
 
 h2 {
