--- a/html-css/module-5/styles/style.css
+++ b/html-css/module-5/styles/style.css
@@ -139,10 +139,17 @@ h2 {
 
 .slider .prev {
     left: 245px;
+    background-image: url(../img/slider/angle-left.svg);
 }
 
 .slider .next {
     right: 245px;
+    background-image: url(../img/slider/angle-right.svg)
+}
+
+.slider .prev,
+.slider .next {
+    background-size: cover;
 }
 
 .slides li {
@@ -219,10 +226,6 @@ h2::after {
     margin-right: 30px;
 }
 
-.product-cart:nth-child(-n + 4) {
-    margin-bottom: 30px;
-}
-
 .product-cart a {
     display: block;
 }
@@ -233,7 +236,7 @@ h2::after {
     position: relative;
 }
 
-.buy-area {
+.fon-area {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -241,12 +244,12 @@ h2::after {
     border: 10px solid #fff
 }
 
-.buy-area, 
+.fon-area, 
 .icon-area {
     opacity: 0;
 }
 
-.product-cart:hover .buy-area {
+.product-cart:hover .fon-area {
     opacity: 0.55;
 }
 
@@ -280,13 +283,26 @@ h2::after {
     background-color: transparent;
 }
 
-.icon-area .two {
-    left: 50%;
-    transform: translateX(-50%);
+.icon-area .icon,
+.icon-area .cart-image {
+    background-size: 37px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-.icon-area .three {
+.icon-area .like {
+    background-image: url(../img/icon/like.svg);
+}
+
+.icon-area .shuffle {
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url(../img/icon/shuffle.svg);
+}
+
+.icon-area .clock {
     right: 0;
+    background-image: url(../img/icon/clock.svg);
 }
 
 .icon-area .icon:hover {
@@ -301,14 +317,16 @@ h2::after {
     color: #fff;
 }
 
-.icon-area button img {
+/* .icon-area button img {
     height: 50px;
     margin: 0 auto;
-}
+} */
 
 .cart-image {
     width: 50px;
+    height: 50px;
     float: left;
+    background-image: url(../img/icon/cart.svg);
 }
 
 .icon-area .cart span {
