--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -48,6 +48,10 @@ input[type="radio"].visually-hidden {
 }
 
 /*Header_________*/
+header {
+    padding-bottom: 88px;
+}
+
 header nav {
     display: flex;
     min-height: 100px;
@@ -98,4 +102,100 @@ header nav {
     width: 100%;
     height: 3px;
     background-color: #f38181;
+}
+
+/*Services section section__________*/
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.first-section-p,
+section h2 {
+    margin: 0;
+}
+
+.first-section-p {
+    margin-bottom: 20px;
+    font-family: "Kaushan Script Regular";
+    font-size: 24px;
+    line-height: 28px;
+}
+
+section h2 {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+}
+
+section h2::after {
+    display: block;
+    content: "";
+    margin: 40px auto 65px;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+}
+
+.services {
+    display: flex;
+    margin-bottom: 100px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.services li {
+    flex: 0 0 380px;
+    background-repeat: no-repeat;
+    background-size: 32px;
+}
+
+.services li:nth-child(-n+3) {
+    margin-bottom: 100px;
+}
+
+.services li:nth-child(1) {
+    background-image: url(../img/icons/clock.png);
+}
+
+.services li:nth-child(2) {
+    background-image: url(../img/icons/line.png);
+}
+
+.services li:nth-child(3) {
+    background-image: url(../img/icons/computer.png);
+}
+
+.services li:nth-child(4) {
+    background-image: url(../img/icons/book.png);
+}
+
+.services li:nth-child(5) {
+    background-image: url(../img/icons/home.png);
+}
+
+.services li:nth-child(6) {
+    background-image: url(../img/icons/digital.png);
+}
+
+.services li h3,
+.services li p {
+    margin: 0;
+    padding-left: 85px;
+}
+
+.services li h3 {
+    padding-bottom: 16px;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.services p {
+    font-family: "Roboto Regular";
+    font-size: 15px;
+    line-height: 24px;
+    color: #999;
+
 }
