Made Portfolio section

--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -78,12 +78,12 @@ header nav {
     justify-content: space-between;
 }
 
-.menu-item {
+/* .menu-item {
     position: relative;
-}
+} */
 
 .menu-item a{
-    position: absolute;
+    position: relative;
     font-size: 14px;
     line-height: 17px;
     text-transform: uppercase;
@@ -97,6 +97,7 @@ header nav {
 .menu-item a:hover::after,
 .menu-item a:focus::after {
     display: block;
+    position: absolute;
     content: "";
     margin: 10px auto 0;
     width: 100%;
@@ -127,12 +128,13 @@ section h2 {
     font-size: 30px;
     line-height: 36px;
     text-transform: uppercase;
+    margin-bottom: 65px;
 }
 
 section h2::after {
     display: block;
     content: "";
-    margin: 40px auto 65px;
+    margin: 40px auto 0;
     width: 60px;
     height: 3px;
     background-color: #f38181;
@@ -192,10 +194,80 @@ section h2::after {
     line-height: 17px;
 }
 
-.services p {
+.services p, 
+.info {
     font-family: "Roboto Regular";
     font-size: 15px;
     line-height: 24px;
     color: #999;
+}
 
+/*Team section______*/
+section:last-child h2 {
+    margin-bottom: 45px;
+}
+
+.info {
+    margin: 0;
+    width: 960px;
+    text-align: center;
+}
+
+.portfolio {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.portfolio li {
+    /* display: flex; */
+    flex: 0 0 380px;
+}
+
+.portfolio li img {
+    margin-bottom: 29px;
+    background-color: #95e1d3;
+}
+
+.portfolio li a {
+    display: block;
+    text-decoration: none;
+}
+
+.portfolio li figure {
+    margin: 0;
+}
+
+figcaption .name,
+figcaption .profession {
+    margin: 0;
+    text-align: center;
+
+}
+
+figcaption .name {
+    margin-bottom: 10px;
+}
+
+figcaption .name a {
+    display: inline;
+    color: #000;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+}
+
+figcaption .profession a {
+    display: inline;
+    font-family: "Roboto Light Italic";
+    font-size: 15px;
+    line-height: 24px;
+    color: #999;
+}
+
+figcaption .profession a:hover,
+figcaption .name a:hover,
+figcaption .profession a:focus
+figcaption .name a:focus {
+    color: #95e1d3;
 }
