--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -203,12 +203,18 @@ section h2::after {
 }
 
 /*Team section______*/
+section:last-child {
+    /* border-bottom: #999 solid 1px; */
+    padding-bottom: 82px;
+    box-shadow: 0 0 0 1px #999;
+}
+
 section:last-child h2 {
     margin-bottom: 45px;
 }
 
 .info {
-    margin: 0;
+    margin: 0 0 90px 0;
     width: 960px;
     text-align: center;
 }
@@ -220,13 +226,13 @@ section:last-child h2 {
 }
 
 .portfolio li {
-    /* display: flex; */
     flex: 0 0 380px;
+    background-image: linear-gradient(#95e1d3 470px, #fff 81px);
+
 }
 
 .portfolio li img {
     margin-bottom: 29px;
-    background-color: #95e1d3;
 }
 
 .portfolio li a {
@@ -271,3 +277,30 @@ figcaption .profession a:focus
 figcaption .name a:focus {
     color: #95e1d3;
 }
+
+/*Footer__________*/
+footer {
+    display: flex;
+    height: 63px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer .copyright {
+    font-size: 14px;
+    line-height: 17px;
+}
+
+footer address {
+    display: inline;
+    font-style: normal;
+    color: #f38181;
+}
+
+footer input[type="text"] {
+    padding: 0;
+}
+
+
+
+
