--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -231,20 +231,31 @@ section:last-child h2 {
 
 }
 
-.portfolio .cart img {
-    margin-bottom: 29px;
+.portfolio .image-box:hover .img-link img {
+    opacity: 0.25;
+}
+
+.image-box {
+    position: relative;
 }
 
 .portfolio .cart a {
     display: block;
-    position: relative;
     text-decoration: none;
+}
+
+.portfolio .cart .img-link {
+    margin-bottom: 29px;
+    background-image: -moz-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
+    background-image: -ms-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
 }
 
 .social-icons {
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 1;
     transform: translate(-50%, -50%);
     display: flex;
     justify-content: space-between;
@@ -259,6 +270,11 @@ section:last-child h2 {
     background-repeat: no-repeat;
     background-color: #fce38a;
     opacity: 0;
+}
+
+.social-icon a {
+    width: 100%;
+    height: 100%;
 }
 
 .social-icon:nth-child(1){
