--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -87,6 +87,7 @@ header nav {
     font-size: 14px;
     line-height: 17px;
     text-transform: uppercase;
+    transition: color 200ms linear;
 }
 
 .menu-item a:hover,
@@ -94,8 +95,8 @@ header nav {
     color: #f38181;
 }
 
-.menu-item a:hover::after,
-.menu-item a:focus::after {
+.menu-item a::after,
+.menu-item a::after {
     display: block;
     position: absolute;
     content: "";
@@ -103,6 +104,13 @@ header nav {
     width: 100%;
     height: 3px;
     background-color: #f38181;
+    opacity: 0;
+    transition: opacity 200ms linear;
+}
+
+.menu-item a:hover::after,
+.menu-item a:focus::after {
+    opacity: 1;
 }
 
 /*Services section section__________*/
@@ -204,7 +212,6 @@ section h2::after {
 
 /*Team section______*/
 section:last-child {
-    /* border-bottom: #999 solid 1px; */
     padding-bottom: 82px;
     box-shadow: 0 1px 0 0 #999;
 }
@@ -231,12 +238,22 @@ section:last-child h2 {
 
 }
 
+.portfolio .img-link img {
+    transition: opacity 200ms linear;
+}
+
 .portfolio .image-box:hover .img-link img {
     opacity: 0.25;
 }
 
 .image-box {
     position: relative;
+    transition: transform 200ms linear;
+}
+
+.image-box:hover, 
+.image-box:focus {
+    transform: translate(-10px, -10px);
 }
 
 .portfolio .cart a {
@@ -270,6 +287,7 @@ section:last-child h2 {
     background-repeat: no-repeat;
     background-color: #fce38a;
     opacity: 0;
+    transition: opacity, background-color 200ms linear;
 }
 
 .social-icon a {
@@ -309,11 +327,15 @@ figcaption .name,
 figcaption .profession {
     margin: 0;
     text-align: center;
-
 }
 
 figcaption .name {
     margin-bottom: 10px;
+}
+
+figcaption .profession a,
+figcaption .name a {
+    transition: color 200ms linear;
 }
 
 figcaption .name a {
