--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -251,8 +251,7 @@ section:last-child h2 {
     transition: transform 200ms linear;
 }
 
-.image-box:hover, 
-.image-box:focus {
+.image-box:hover {
     transform: translate(-10px, -10px);
 }
 
@@ -311,11 +310,12 @@ section:last-child h2 {
     background-image: url(../img/social-icons/instagram.png);
 }
 
-.cart:hover .social-icon {
+.image-box:hover .social-icon {
     opacity: 1;
 }
 
-.social-icon:hover {
+.social-icon:hover, 
+.social-icon:focus {
     background-color: #95e1d3;
 }
 
@@ -403,4 +403,5 @@ footer button[type="submit"] {
     box-shadow: 0 0 0 1px #95e1d3;
     color: #fff;
     cursor: pointer;
+    text-transform: uppercase;
 }
