Fixed classname and fonts

--- a/html-css/module-6/styles/style.css
+++ b/html-css/module-6/styles/style.css
@@ -67,6 +67,7 @@ header nav {
 }
 
 .site-logo {
+    font-family: 'Montserrat Bold';
     font-weight: bold;
     font-size: 30px;
     line-height: 36px;
@@ -77,10 +78,6 @@ header nav {
     min-width: 490px;
     justify-content: space-between;
 }
-
-/* .menu-item {
-    position: relative;
-} */
 
 .menu-item a{
     position: relative;
@@ -115,13 +112,13 @@ header nav {
 
 /*Services section section__________*/
 section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
+
 .first-section-p,
 section h2 {
     margin: 0;
+    font-family: 'Montserrat Bold';
 }
 
 .first-section-p {
@@ -153,6 +150,7 @@ section h2::after {
     margin-bottom: 100px;
     flex-wrap: wrap;
     justify-content: space-around;
+    text-align: left;
 }
 
 .services li {
@@ -161,31 +159,31 @@ section h2::after {
     background-size: 32px;
 }
 
-.services li:nth-child(-n+3) {
+.services li:not(:nth-last-child(-n+3)) {
     margin-bottom: 100px;
 }
 
-.services li:nth-child(1) {
+.services .clock {
     background-image: url(../img/icons/clock.png);
 }
 
-.services li:nth-child(2) {
+.services .line {
     background-image: url(../img/icons/line.png);
 }
 
-.services li:nth-child(3) {
+.services .computer {
     background-image: url(../img/icons/computer.png);
 }
 
-.services li:nth-child(4) {
+.services .book {
     background-image: url(../img/icons/book.png);
 }
 
-.services li:nth-child(5) {
+.services .home {
     background-image: url(../img/icons/home.png);
 }
 
-.services li:nth-child(6) {
+.services .digital {
     background-image: url(../img/icons/digital.png);
 }
 
@@ -221,7 +219,7 @@ section:last-child h2 {
 }
 
 .info {
-    margin: 0 0 90px 0;
+    margin: 0 auto 90px;
     width: 960px;
     text-align: center;
 }
@@ -279,43 +277,40 @@ section:last-child h2 {
     height: 55px;
 }
 
-.social-icon {
+.social-icon a {
     width: 55px;
     height: 55px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #fce38a;
-    opacity: 0;
     transition: opacity, background-color 200ms linear;
+    opacity: 0;
 }
 
-.social-icon a {
-    width: 100%;
-    height: 100%;
-}
-
-.social-icon:nth-child(1){
+.social-icon .facebook {
     background-image: url(../img/social-icons/facebook.png);
 }
 
-.social-icon:nth-child(2){
+.social-icon .twitter {
     background-image: url(../img/social-icons/twitter.png);
 }
 
-.social-icon:nth-child(3){
+.social-icon .pinterest {
     background-image: url(../img/social-icons/pinterest.png);
 }
 
-.social-icon:nth-child(4){
+.social-icon .instagram {
     background-image: url(../img/social-icons/instagram.png);
 }
 
-.image-box:hover .social-icon {
+.image-box:hover .social-icons a,
+.img-link:focus + .social-icons a,
+.social-icon a:focus  {
     opacity: 1;
 }
 
-.social-icon:hover, 
-.social-icon:focus {
+.social-icon a:hover, 
+.social-icon a:focus {
     background-color: #95e1d3;
 }
 
@@ -339,7 +334,6 @@ figcaption .name a {
 }
 
 figcaption .name a {
-    display: inline;
     color: #000;
     font-size: 14px;
     line-height: 17px;
@@ -347,7 +341,6 @@ figcaption .name a {
 }
 
 figcaption .profession a {
-    display: inline;
     font-family: "Roboto Light Italic";
     font-size: 15px;
     line-height: 24px;
@@ -396,11 +389,19 @@ footer input[type="email"] {
     box-shadow: 0 0 0 1px #e7e7e7;
 }
 
+footer input[type="email"]::placeholder {
+    font-family: "Roboto Light Italic";
+    font-size: 15px;
+    line-height: 24px;
+    color: #ccc;
+}
+
 footer button[type="submit"] {
     width: 150px;
     height: 40px;
     background-color: #95e1d3;
     box-shadow: 0 0 0 1px #95e1d3;
+    font-family: 'Montserrat Bold';
     color: #fff;
     cursor: pointer;
     text-transform: uppercase;
