--- a/html-css/module-7/styles/style.css
+++ b/html-css/module-7/styles/style.css
@@ -242,13 +242,70 @@ section h2 + p,
     background-color: #222;
     background-image: url(../img/map-image.png);
     background-repeat: no-repeat;
-    background-position: right;
+    background-position-x: right;
+    background-position-y: 120px;
 }
 
 .form-section h2 {
     color: #fff;
 }
 
-.form-section form input {
+.form-section form {
+    padding-bottom: 115px;
+}
+
+.fields {
+    display: flex;
+    height: 270px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.form__element {
     width: 455px;
+    height: 50px;
+    box-shadow: 0 0 1px #777;
+}
+
+.form__element--big {
+    height: 210px;
+    align-self: flex-end;
+}
+
+.form__element--small {
+    height: 65px;
+    width: 240px;
+    box-shadow: 0;
+    margin: 0 auto;
+}
+
+.control {
+    width: 100%;
+    height: 100%;
+    border: 0;
+    border-radius: 3px;
+    padding: 0 0 0 20px;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+}
+
+.control--message {
+    padding-top: 17px;
+    resize: none;
+}
+
+.control--button {
+    padding: 0;
+    font-size: 18px;
+    color: #fff;
+    background-color: #fed136;
+
+}
+
+.control::placeholder {
+    font-size: 14px;
+    color: #bbb;
+    font-weight: bold;
 }
