--- a/html-css/module-7/styles/style.css
+++ b/html-css/module-7/styles/style.css
@@ -91,6 +91,7 @@ html {
          url('../fonts/mr-dafoe-v8-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/mr-dafoe-v8-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+
 body {
     font-family: 'Montserrat', 'Times New Roman', sans-serif;
 }
@@ -327,6 +328,7 @@ section h2 + p,
     color: #fff;
     background-color: #fed136;
     transition: background-color 200ms linear;
+    cursor: pointer;
 }
 
 .control--button:hover, 
