--- a/html-css/module-8/styles/style.css
+++ b/html-css/module-8/styles/style.css
@@ -92,18 +92,204 @@ input[type="radio"].visually-hidden {
 
 /*Header_______*/
 
-picture {
+/* picture {
     display: block;
     max-width: 100%;
     height: 100%;
-}
+} */
 
 .img-wrapper {
+    /* padding: 0 10px; */
     height: 540px;
+    position: relative;
+    text-align: center;
+    background-image: url(../img/banner/mobile-baner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+header {
+    padding: 20px 0 34px;
+    
+}
+
+.autorization li {
+    display: inline-block;
+    height: 36px;
+}
+
+.log-in {
+    margin-right: 18px;
+}
+
+.sign-up {
+    width: 90px;
+}
+
+.autorization button {
+    display: block;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 17px;
+    color: #fff;
+}
+
+.sign-up button{
+    border: 2px solid #fff;
+    border-radius: 27px;
+}
+
+.autorization button, 
+.site-logo, 
+.main-info, 
+.banner-info button {
+    font-weight: 700;
+    color: #fff;
+}
+
+.site-logo {
+    margin-top: 119px;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.main-info {
+    font-size: 30px;
+    text-transform: uppercase;
+    line-height: 36px;
+    margin: 0 0 18px;
+}
+
+.other-info {
+    padding: 0 50px;
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    color: #fff;
+    margin-top: 0;
+}
+
+.banner-info button {
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    height: 40px;
+    width: 280px;
+    border: 0;
+    background-color: #ff4e50;
+    border-radius: 27px;
+}
+
+/*Section__________*/
+.holiday-partner {
+    padding: 72px 0 57px;
+    text-align: center;
+}
+
+.holiday-partner h2 {
+    margin: 0 0 18px;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+}
+
+.holiday-partner ul {
+    margin-bottom: 28px;
+}
+
+.candidate {
+    padding: 0 64px;
+}
+
+.candidate figure {
+    margin: 0;
+}
+
+.img-link {
+    margin-bottom: 16px;
+}
+
+.img-link .img-wrap {
+    width: 122px;
+    margin: 0 auto;
     position: relative;
 }
 
-.banner-wrap {
+.img-link .img-wrap::after {
+    display: block;
+    width: 40px;
+    height: 40px;
+    bottom: 0;
+    right: 0;
+    content: "";
     position: absolute;
+    z-index: 1;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 4px solid #fff;
+    border-radius: 50%;
 }
 
+.img-link .hunter::after {
+    background-image: url(../img/holiday-candidate/icon-hunter.svg);
+    background-color: #ff4e50;
+}
+
+.img-link .marsha::after {
+    background-image: url(../img/holiday-candidate/icon-marsha.svg);
+    background-color: #ffa507;
+}
+
+.img-link .walker::after {
+    background-image: url(../img/holiday-candidate/icon-walker.svg);
+    background-color: #1cd7ad;
+}
+
+.img-link .bradley::after {
+    background-image: url(../img/holiday-candidate/icon-bradley.svg);
+    background-color: #4e73db;
+}
+
+.candidate .name a{
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 19px;
+}
+
+.candidate .name a, 
+.candidate .candidate-info a {
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.candidate .candidate-info a {
+    font-family: 'Roboto';
+    font-weight: 300;
+    color: #666;
+}
+
+.holiday-partner button {
+    display: block;
+    height: 40px;
+    width: 280px;
+    margin: 0 auto;
+    border: 2px solid #ff4e50;
+    border-radius: 27px;
+    background-color: transparent;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #ff4e50;
+}
+
+@media (max-width: 767px) {
+    .candidate:not(:last-child){
+        margin-bottom: 30px;
+    }
+}
