--- a/html-css/module-8/styles/style.css
+++ b/html-css/module-8/styles/style.css
@@ -105,6 +105,7 @@ input[type="radio"].visually-hidden {
     text-align: center;
     background-image: url(../img/banner/mobile-baner.jpg);
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
 }
 
@@ -292,4 +293,14 @@ header {
     .candidate:not(:last-child){
         margin-bottom: 30px;
     }
+}
+
+@media (min-width: 321px) and (max-width: 767px) {
+    .img-wrapper {
+        background-image: url(../img/banner/480-mobile-baner.png);
+        background-color: black;
+    }
+    .container {
+        width: 100vh;
+    } 
 }
