--- a/html-css/module-8/styles/style.css
+++ b/html-css/module-8/styles/style.css
@@ -295,12 +295,13 @@ header {
     }
 }
 
-@media (min-width: 321px) and (max-width: 767px) {
+@media (min-width: 480px) {
     .img-wrapper {
         background-image: url(../img/banner/480-mobile-baner.png);
         background-color: black;
     }
     .container {
-        width: 480px;
+        width: 478px;
     } 
 }
+
