Fixed margin for .candidate in desktop css

--- a/html-css/module-8/styles/style.css
+++ b/html-css/module-8/styles/style.css
@@ -423,3 +423,9 @@ header {
         width: 222px;
     }
 }
+
+@media (min-width: 1440px) {
+    .candidate:not(:nth-last-child(-n + 4)) {
+        margin-bottom: 60px;
+    }
+}
