Fixed 480 mobile css

--- a/html-css/module-8/styles/style.css
+++ b/html-css/module-8/styles/style.css
@@ -303,6 +303,7 @@ header {
     }
 
     .img-wrapper {
+        width: 478px;
         background-image: url(../img/banner/480-mobile-baner.png);
         background-color: black;
     }
